--- a/src/estilos/principal.scss
+++ b/src/estilos/principal.scss
@@ -1,4 +1,3 @@
-// Estilos globales para la aplicación
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,7 +12,6 @@ body {
     monospace;
 }
 
-// Estilos globales para asegurar que el contenido principal empuje el footer al final de la página
 html, body {
     height: 100%; // Permite que la altura mínima de la página sea la altura de la ventana
     margin: 0;
@@ -26,7 +24,6 @@ html, body {
 }
 
 
-// Estilos para el layout completo
 .layout {
     display: flex;
     flex-direction: column;
@@ -34,60 +31,58 @@ html, body {
     
 }
 
-// Estilos para la barra de navegación
 .navbar {
-    background-color: #343a40; // Igual que la barra de navegación para consistencia
+    background-color: #343a40; 
     color: #ffffff;
     text-align: center;
     
 }
 
-// Estilos para el pie de página
 .footer {
-    background-color: #343a40; // Igual que la barra de navegación para consistencia
+    background-color: #343a40; 
     color: #ffffff;
     text-align: center;
     
 }
 
-// Estilos para el contenido principal
+
 .content {
-    flex: 1; // Permite que el contenido se expanda para ocupar cualquier espacio vertical disponible
+    flex: 1;
     padding: 20px;
-    background-color: #ffffff; // Fondo blanco para el contenido principal
-    color: #212529; // Texto oscuro para un buen contraste
+    background-color: #ffffff;
+    color: #212529; 
 }
-// Estilos para la barra de navegación
+
 .navbar {
-    background-color: #343a40; // Gris oscuro
-    color: #ffffff; // Texto blanco para alto contraste
+    background-color: #343a40; 
+    color: #ffffff; 
 
     .nav-link {
-        color: #f8f9fa; // Asegúrate de que los enlaces son claros y visibles
+        color: #f8f9fa; 
 
         &:hover {
-            color: #cbd3da; // Un gris más claro para el hover
+            color: #cbd3da; 
         }
     }
 
     .navbar-brand {
-        color: #ffffff; // Color blanco para el logo o título de la app
+        color: #ffffff;
 
         &:hover {
-            color: #cbd3da; // Un gris más claro para el hover
+            color: #cbd3da; 
         }
     }
 }
 
 .formulario-custom {
-    max-width: 600px; // Limita el ancho del formulario
-    margin: auto; // Centra el formulario horizontalmente
+    max-width: 600px; 
+    margin: auto; 
   }
   
   .formulario-custom .btn {
-    display: block; // Hace que el botón sea un bloque
-    width: 50%; // Ancho del botón
-    margin: 20px auto 0; // Centra el botón horizontalmente y añade espacio arriba
+    display: block;
+    width: 40%; 
+    margin: 20px auto 0; 
   }
   
 
